# Qt6_QWindowKit_QML_demo

./: .gitignore  .gitmodules  .qmlls.ini  CMakeLists.txt  CMakeLists1.txt  FLEX_DEMO.qml  FramelessWindow.qml  FramelessWindow.qml.bak  MyNote.md  README.md  main.cpp  main.qml  resources.qrc
cmake/: CMakeLists.txt  FindQWindowKit.cmake  qtruntime.cmake
layout/: BottomBar.qml  LeftSideBar.qml  MainContent.qml  Theme.qml
widgetframe/: CMakeLists.txt
